--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true iikkasohova/dockertest npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: dockertest
+  env: "Dockertest-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-988112870794"
+  bucket_path: "dockertest"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
